Fix positionSize & add tests, fix reading from env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MT5_LOGIN=123123
-MT5_PASSWORD='your-password'
-MT5_SERVER='broker-mt5-server'
-LICENSE_ID='license-id'
-WS_URL='ws://localhost:3000/websocket'
+MT5_PASSWORD=your-password
+MT5_SERVER=broker-mt5-server
+LICENSE_ID=license-id
+WS_URL=ws://localhost:3000/websocket
